--- a/src/styles.css
+++ b/src/styles.css
@@ -2,27 +2,29 @@ html {
     height: 100%;
 }
 
+nav {
+    text-align: right;
+    margin-right: 75px;
+    margin-top: 40px;
+}
+
+nav a {
+  text-align: center;
+  display: inline;
+  color: white;
+  text-decoration: none;
+  margin: 15px;
+  font-family: 'Lucida Grande';
+  font-size: larger;
+}
+
 body {
     background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('./resources/rst.jpg');
     background-repeat: no-repeat;
     background-size: 100% 100%;
   }
 
-  nav {
-      text-align: right;
-      margin-right: 75px;
-      margin-top: 40px;
-  }
 
-nav a {
-    text-align: center;
-    display: inline;
-    color: white;
-    text-decoration: none;
-    margin: 15px;
-    font-family: 'Lucida Grande';
-    font-size: larger;
-}
 
 .active{
     border-bottom: 1px solid #bbb;
@@ -61,6 +63,17 @@ nav a {
     float: left;
 }
 
+.button-clicked{
+    background-color: rgb(255, 255, 255);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: larger;
+    font-weight:bold;
+    width: 100px;
+    padding: 25px 15px;
+    color:rgb(92, 78, 60);
+    float: left;
+}
+
 .tabSelected{
     background-color: white;
     padding: 25px;
@@ -69,10 +82,7 @@ nav a {
     margin-top: 0px;
 }
 
-.tabSelected:active{
-    background-color:rgb(92, 78, 60);
-    color: white;
-}
+
 
 #menuOne{
     background-color: white;
