--- a/src/styles.css
+++ b/src/styles.css
@@ -3,9 +3,12 @@ html {
 }
 
 nav {
+    display: inline-block;
     text-align: right;
-    margin-right: 75px;
+    margin-right: 50px;
     margin-top: 40px;
+    margin-bottom: 50px;
+    margin-left: 1200px
 }
 
 nav a {
@@ -16,6 +19,14 @@ nav a {
   margin: 15px;
   font-family: 'Lucida Grande';
   font-size: larger;
+}
+
+.logo {
+    display: inline-block;
+    font-size: x-large;
+    font-family:cursive ;
+    margin-left: 50px;
+    color: white;
 }
 
 body {
@@ -86,6 +97,9 @@ body {
     height: 500px;
     width: 1000px;
     margin-top: 0px;
+    font-family: monospace;
+    font-size: large;
+    color: black;
 }
 
 
@@ -97,3 +111,18 @@ body {
     width: 1000px;
     margin-top: 0px;
 }
+
+h1{
+    font-family: 'Lucida Grande';
+    color: white;
+}
+
+p {
+    font-family: 'Lucida Grande';
+    height: 100%;
+    width: 500px;
+    color: white;
+    font-size: large;
+}
+
+
