--- a/src/styles.css
+++ b/src/styles.css
@@ -30,7 +30,7 @@ nav a {
 }
 
 body {
-    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('./resources/rst.jpg');
+    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('./resources/rst.png');
     background-repeat: no-repeat;
     background-size: 100% 100%;
   }
